--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <td>    <h1>Pardha Namuduri, P.E.</h1>
               <h3><em>President, <strong><a href="http://www.neeraengineers.com"><br>Neera
                  Associates, Inc.</a></em><h3>
-              <p>880 Tully Road, Suite 87, Houston, Texas 77079, (832) 641-5413</p>
+                <p>880 Tully Road, Suite 87, Houston, Texas 77079</p>
+                <p>(832) 641-5413</p>
 </td>
       </tr>
     </table>
