--- a/WW_resume_pages.html
+++ b/WW_resume_pages.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>water/wastewater resume</title>
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <h1><p align="center">Water/wastewater resume</h1>
   <body>
-    <img src="resume_Page_1.jpg" alt="page1"><br>
-    <img src="resume_Page_2.jpg" alt="page2"><br>
-    <img src="resume_Page_3.jpg" alt="page3"><br>
+    <table>
+      <tr><td><img src="images/resume_Page_1.jpg" alt="page1"><br></td></tr>
+      <tr><td><img src="images/resume_Page_2.jpg" alt="page2"><br></td></tr>
+      <tr><td><img src="images/resume_Page_3.jpg" alt="page3"><br></td></tr>
+    </table>
+
+
   </body>
 </html>
