--- a/Structural_resume_pages.html
+++ b/Structural_resume_pages.html
@@ -3,19 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>structural resume</title>
+    <link rel="stylesheet" href="css/master.css">
   </head>
   <h1><p align="center"> Structural Resume</h1>
   <body>
     <table>
-      <tr>
-        <img src="Strl_resume_Page_1.jpg" alt="page1">
-      </tr>
-      <tr>
-        <img src="Strl_resume_Page_2.jpg" alt="page2">
-      </tr>
-      <tr>
-        <img src="Strl_resume_Page_3.jpg" alt="page3">
-      </tr>
+      <tr><td><img src="images/Strl_resume_Page_1.jpg" alt="page1"></td></tr>
+      <tr><td><img src="images/Strl_resume_Page_2.jpg" alt="page2"></td></tr>
+      <tr><td><img src="images/Strl_resume_Page_3.jpg" alt="page3"></td></tr>
     </table>
   </body>
 </html>
