--- a/contact.html
+++ b/contact.html
@@ -3,27 +3,34 @@
   <head>
     <meta charset="utf-8">
     <title>Contract Details</title>
+      <link rel="stylesheet" href="css/master.css">
   </head>
-  <h1>Contact Details</h1>
+  <h1><p align="center">Contact Details</h1>
   <hr size=6 noshade>
   <body>
-    <h3><p>Pardha Namuduri, P.E. <br>
-    President<br>
-    Neera Associates, Inc.<br>
-    880 Tully Road, Suite 87<br>
-    Houston, Texas 77079, USA<br>
-    Phone: 001.832.641.5413<br>
-    email: psnamuduri@gmail.com<br>
-    Web:  http://www.neeraengineers.com<p></h3>
+    <table>
+      <tr><td>Pardha Namuduri, P.E. <br></td></tr>
+      <tr><td>President<br></td></tr>
+      <tr><td>Neera Associates, Inc.<br></td></tr>
+      <tr><td>880 Tully Road, Suite 87<br></td></tr>
+      <tr><td>Houston, Texas 77079, USA<br></td></tr>
+      <tr><td>Phone: 001.832.641.5413<br></td></tr>
+      <tr><td>email: psnamuduri@gmail.com<br></td></tr>
+      <tr><td>Web:  http://www.neeraengineers.com</td></tr>
+    </table>
     <hr size=6 noshade>
-    <form class="" action="mailto:psnamuduri@gmail.com" method="post">
-      <label>Your Name:</label>
-      <input type="text" name="yourName" value=""><br>
-      <label>Your Email:</label>
-      <input type="email" name="yourEmail" value=""><br><br>
-      <label>Your Message:</label><br>
-      <textarea name="name" rows="10" cols="30"></textarea><br>
-      <input type="submit" name="">
-    </form>
+    <table>
+      <tr><td><form class="" action="mailto:psnamuduri@gmail.com" method="post">
+        <label>Your Name:</label>
+        <input type="text" name="yourName" value=""><br></form></td></tr>
+      <tr><td><label>Your Email:</label>
+            <input type="email" name="yourEmail" value=""><br><br></td></tr>
+      <tr><td><label>Your Message:</label><br></td></tr>
+      <tr><td><textarea name="name" rows="10" cols="30"></textarea><br></td></tr>
+      <tr><td><input type="submit" name=""></td></tr>
+    </table>
+
+
+
   </body>
 </html>
