--- a/index.html
+++ b/index.html
@@ -3,46 +3,53 @@
   <head>
     <meta charset="utf-8">
     <title>Pardha's Personal Site</title>
+    <link rel="stylesheet" href="css/master.css">
+
   </head>
-  <body>
-    <table cellspacing="10">
+<body>
+    <table cellspacing="10"
       <tr>
-        <td>    <img src="Pardha's face 1A.jpg" alt="Featured Engineer Photo"></td>
+        <td><img src="images/Pardha's face 1A.jpg" alt="Featured Engineer Photo"></td>
         <td>    <h1>Pardha Namuduri, P.E.</h1>
               <h3><em>President, <strong><a href="http://www.neeraengineers.com"><br>Neera
                  Associates, Inc.</a></em><h3>
               <p>880 Tully Road, Suite 87, Houston, Texas 77079 </p>
               <p>(832) 641-5413</p>
-</td>
+            </td>
       </tr>
-    </table>
-
+          </table>
       <hr size=6 noshade>
       <h3>Education</h3>
-      <ul>
-        <li>Bachelor of Engineering, <a href=
-          "https://www.andhrauniversity.edu.in/college/college-of-engineering/engineering-home.html">Andhra
-          University</a>, Visakhapatnam, India</li>
-        <li>Master of Technology, <a href="https://www.iitm.ac.in/">IIT Madras</a>, Chennai, India</li>
-        <li>Master of Science, <a href="https://ceas.uc.edu/academics/departments/chemical-environmental-engineering.html">University of Cincinnati</a>, Ohio</li>
-      </ul>
+        <table cellspacing="10">
+          <tr> <td>Bachelor of Engineering,</td> <td><a href="https://www.andhrauniversity.edu.in/college/college-of-engineering/engineering-home.html">Andhra
+            University</td><td>Visakhapatnam, India</td></tr>
+          <tr> <td>Master of Technology, </td> <td><a href="https://www.iitm.ac.in/">IIT Madras</a></td><td>Chennai, India</td></tr>
+          <tr> <td>Master of Science, </td> <td><a href="https://ceas.uc.edu/academics/departments/chemical-environmental-engineering.html">University of Cincinnati</a></td>,<td> Ohio, USA</td></tr>
+        </table>
+        <hr size=6 noshade>
       <h3>Engineering Licenses & Registrations</h3>
-      <ul>
-        <li>Texas (Home State)</li>
-        <li>California, Oklahoma, Louisiana, South Carolina, New Mexico,
-          Florida, North Carolina, Georgia, Illinois, Mississippi,
-          North Dakota</li>
-      </ul>
-      <h3>Areas of Personal Expertise</h3>
-      <ul>
-        <li>Water/Wastewater Engineering</li>
-        <li>Structural Engineering</li>
-        <li>Aviation Fuel Engineering</li>
-      </ul>
+      <table>
+        <tr><td>P.E., Texas (Home State)</td></tr>
+        <tr><td>P.E., California, Oklahoma, Louisiana</td></tr>
+        <tr><td>South Carolina, New Mexico,</td></tr>
+        <tr><td>Florida, North Carolina, Georgia,</td></tr>
+        <tr><td>Illinois, Mississippi, North Dakota</td></tr>
+        <tr><td>BCEE (Board Certified Environmental Engineer)</td></tr>
+      </table>
+        <table>
+        <tr><td>Water/Wastewater Engineering</td></tr>
+        <tr><td>Structural Engineering</td></tr>
+        <tr><td>Aviation Fuel Engineering</td></tr>
+      </<table>
       <hr size=6 noshade>
-      <h3>Projects/Positions</h3>
-      <a href="WW_resume_pages.html">Water/Wastewater Projects</a><br>
-      <a href="Structural_resume_pages.html">Structural Engineering Projects</a><br>
-      <h3><a href="contact.html">Contact details</a></h3>
+      <h3>Areas of Personal Expertise</h3>
+      <table>
+      <hr size=6 noshade>
+        <h3>Projects/Positions</h3>
+        <tr><td><a href="WW_resume_pages.html">Water/Wastewater Projects</a></td></tr>
+        <tr><td><a href="Structural_resume_pages.html">Structural Engineering Projects</a></td></tr>
+      </table>
+  <hr size=6 noshade>
+  <h3><a href="contact.html">Contact details</a></h3>
   </body>
 </html>
