--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Pardha's Personal Site</title>
-    <link rel="stylesheet" href="/master.css">
+    <link rel="stylesheet" href="master.css">
 
   </head>
 <body>
