--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Contract Details</title>
-      <link rel="stylesheet" href="css/master.css">
+      <link rel="stylesheet" href="master.css">
   </head>
   <h1><p align="center">Contact Details</h1>
   <hr size=6 noshade>
