--- a/WW_resume_pages.html
+++ b/WW_resume_pages.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>water/wastewater resume</title>
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="master.css">
   </head>
   <h1><p align="center">Water/wastewater resume</h1>
   <body>
