--- a/Structural_resume_pages.html
+++ b/Structural_resume_pages.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>structural resume</title>
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="master.css">
   </head>
   <h1><p align="center"> Structural Resume</h1>
   <body>
